@@ -8,13 +8,48 @@
 #include <math.h>
 #include <stdio.h>
 
+int _MINGW_INSTALL_DEBUG_MATHERR __attribute__((weak)) = 0;
+
 int __defaultmatherr = 0;
 
 int __CRTDECL
 _matherr (struct _exception *pexcept)
 {
-  /* Make compiler happy.  */
-  pexcept = pexcept;
-  printf ("_matherr\n");
+  const char * type;
+
+  switch(pexcept->type)
+    {
+      case _DOMAIN:
+	type = "Argument domain error (DOMAIN)";
+	break;
+
+      case _SING:
+	type = "Argument singularity (SIGN)";
+	break;
+
+      case _OVERFLOW:
+	type = "Overflow range error (OVERFLOW)";
+	break;
+
+      case _PLOSS:
+	type = "Partial loss of significance (PLOSS)";
+	break;
+
+      case _TLOSS:
+	type = "Total loss of significance (TLOSS)";
+	break;
+
+      case _UNDERFLOW:
+	type = "The result is too small to be represented (UNDERFLOW)";
+	break;
+
+      default:
+	type = "Unknown error";
+	break;
+    }
+
+  fprintf(stderr, "_matherr(): %s in %s(%g, %g)  (retval=%g)\n", 
+	  type, pexcept->name, pexcept->arg1, pexcept->arg2, pexcept->retval);
   return 0;
 }
+
