@@ -1,3 +1,11 @@
+2009-03-11  Alexey Pushkin  <Alexey.Pushkin@mererand.com>
+
+	* crt/crtexe.c (_MINGW_INSTALL_DEBUG_MATHERR): Use for
+	optional debugging code for _matherr.
+	* crt/merr.c (_MINGW_INSTALL_DEBUG_MATHERR): New.
+	(_matherr): Show more details for debugging math
+	exceptions.
+
 2009-02-27  Kai Tietz  <kai.tietz@onevision.com>
 
 	* crt/mingw_helper.c (__mingw_get_crt_info): Append
